--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
 PORT=8081
-DB_HOST=localhost
-DB_USERNAME=postgres
-DB_PASSWORD=123Ergash
-DB_PORT=5432
-DB_NAME=Books
+POSTGRES_URL="postgres://default:IVoRF9hCxX1W@ep-curly-resonance-a1ke5i9p-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
