--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,7 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
+    { "src": "/api/(.*)", "dest": "/routes/$1" },
+    { "src": "/uploads/(.*)", "dest": "/uploads/$1" }
   ]
 }
