--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "app.js",
-      "use": "@vercel/node"
-    }
-  ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/routes/$1" },
-    { "src": "/uploads/(.*)", "dest": "/uploads/$1" }
+    { "src": "/uploads/(.*)", "dest": "/uploads/$1" },
+    { "src": "/users/(.*)", "dest": "/users/$1" }
   ]
 }
